fix infobox on mobile

--- a/src/components/Session/Infobox/SessionInfoBox.module.scss
+++ b/src/components/Session/Infobox/SessionInfoBox.module.scss
@@ -1,8 +1,8 @@
 .box {
-  @apply bg-gray-200 px-3;
+  @apply bg-gray-200 px-3 py-2 space-y-2;
 
   &__header {
-    @apply border-b-2 border-gray-400 py-2 flex justify-between;
+    @apply border-b-2 border-gray-400 pb-1 flex justify-between items-center;
   }
 
   &__body {
@@ -13,11 +13,19 @@
     @apply text-gray-500;
   }
 
-  &__description {
-    @apply max-w-lg;
-  }
+  // &__description {
+  //   @apply max-w-lg;
+  // }
 
   &__shareIcon {
-    @apply h-8 w-8 cursor-pointer text-gray-600;
+    @apply h-8 w-8 cursor-pointer text-gray-600 shrink-0 ml-3;
+  }
+}
+
+.speakers {
+  @apply flex items-center;
+
+  &__title {
+    @apply mr-2 leading-none text-gray-600;
   }
 }
